[iOS] Image extraction fails in Google search results https://bugs.webkit.org/show_bug.cgi?id=224527 <rdar://problem/76500331>

Reviewed by Andy Estes.

Source/WebCore:

Override the `-webkit-user-select` CSS property in Google search results pages, and make a slight adjustment to
the user agent stylesheet.

Test: fast/images/image-extraction/image-overlay-in-image-with-zero-font-size.html

* html/HTMLElement.cpp:
(WebCore::HTMLElement::updateWithImageExtractionResult):
* html/shadow/imageOverlay.css:
(div#image-overlay):

Additionally force a default value for the font size and font family of the image overlay text, so that a
cascading font size of 0 won't end up breaking logic for computing image overlay CSS transforms. See layout test
for more details.

* page/Quirks.cpp:
(WebCore::Quirks::needsToForceUserSelectWhenInstallingImageOverlay const):
* page/Quirks.h:

LayoutTests:

Add a new layout test to exercise the user agent stylesheet change.

* fast/images/image-extraction/image-overlay-in-image-with-zero-font-size-expected-mismatch.html: Added.
* fast/images/image-extraction/image-overlay-in-image-with-zero-font-size.html: Added.

Canonical link: https://commits.webkit.org/236577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276026 268f45cc-cd09-0410-ab3c-d52691b4dbfc